efi_paper.bib; biblio; Added a few more references from changes on OneDrive

--- a/efi_paper.bib
+++ b/efi_paper.bib
@@ -725,6 +725,18 @@ Financial incentives may be effective in changing healthcare professional practi
   pmid = {21735443}
 }
 
+@book{smith13a,
+  title = {Best Care at Lower Cost: The Path to Continuously Learning Health Care in {{America}}},
+  shorttitle = {Best Care at Lower Cost},
+  editor = {Smith, Mark D. and {Institute of Medicine (U.S.)}},
+  year = {2013},
+  publisher = {{National Academies Press}},
+  address = {{Washington, D.C}},
+  isbn = {978-0-309-26073-2 978-0-309-26074-9},
+  keywords = {Costs and Cost Analysis,Delivery of Health Care,economics,Efficiency; Organizational,Quality of Health Care,United States},
+  lccn = {RA395.A3 B475 2013}
+}
+
 @article{friedman14,
   title = {Toward a Science of Learning Systems: A Research Agenda for the High-Functioning {{Learning Health System}}},
   shorttitle = {Toward a Science of Learning Systems},
@@ -2736,3 +2748,18 @@ CONCLUSION: These results support the robustness of the concept of frailty as a 
 }
 
 
+@article{meissner20a,
+  title = {Engagement Science: {{The}} Core of Dissemination, Implementation, and Translational Research Science},
+  shorttitle = {Engagement Science},
+  author = {Meissner, Paul and Cottler, Linda B. and Eder, Milton ``Mickey'' and Michener, J. Lloyd},
+  year = {2020},
+  month = jun,
+  volume = {4},
+  pages = {216--218},
+  issn = {2059-8661},
+  doi = {10.1017/cts.2020.8},
+  abstract = {Abstract             Stakeholder engagement is acknowledged as central to dissemination and implementation (D\&I) of research that generates and answers new clinical and health service research questions. There is both benefit and risk in conducting stakeholder engagement. Done wrong, it can damage trust and adversely impact study results, outcomes, and reputations. Done correctly with sensitivity, inclusion, and respect, it can significantly facilitate improvements in research prioritization, communication, design, recruitment strategies, and ultimately provide results useful to improve population and individual health. There is a recognized science of stakeholder engagement, but a general lack of knowledge that matches its strategies and approaches to particular populations of interest based on history and characteristics. This article reviews stakeholder engagement, provides several examples of its application across the range of translational research, and recommends that Clinical Translational Science Awards, with their unique geographical, systems, and historical characteristics, actively participate in deepening our understanding of stakeholder engagement science and methods within implementation and dissemination research. These recommendations include (a) development of an inventory of successful stakeholder engagement strategies; (b) coordination and intentionally testing a variety of stakeholder engagement strategies; (c) tool kit development; and (d) identification of fundamental motivators and logic models for stakeholder engagement to help align stakeholders and researchers.},
+  journal = {Journal of Clinical and Translational Science},
+  language = {en},
+  number = {3}
+}
