--- a/efi_patientsafety.Rmd
+++ b/efi_patientsafety.Rmd
@@ -104,8 +104,11 @@ Medicare & Medicaid Services Hierarchical Condition Categories (CMS-HCC) alone.
 To be pro-active, health systems need to be able to replicate such analysis on
 their own electronic medical record (EMR) data. Several groups have adapted the
 Rockwood index to EMR-derived data [@clegg16a; @pajewski19; @stow18]. So far
-[[\@Bokov, Alex F](styles.xml) TODO: see if the literature supports a stronger statement than \'mainly\']{.comment-start id="0" author="Bokov, Alex F"
-date="2020-10-16T08:30:43Z"}mainly []{.comment-end id="0"}
+`r note('mainly'
+,'\\@bokov\\
+\\
+TODO: see if the literature supports a stronger statement than \'mainly\''
+,date="2020-10-16T08:30:43Z")`
 patients older than 65 have been studied yet value-based care is
 broader than Medicare. As private payers start moving to the ACO model it is
 important to understand whether EFI generalizes to outcomes such as preventable
@@ -135,16 +138,11 @@ knowledge rapidly to inform decisions can have transformative effects on complex
 systems that provide services.  The Learning Health System (LHS) is one widely
 held vision for realizing this transformation.  The LHS uses routine data from
 service delivery and patient care to generate knowledge to continuously improve
-healthcare.  {Friedman C, Rubin J, Brown J, et al. Toward a science of learning
-systems: a research agenda for the high-functioning learning health system. J Am
-Med Inform Assoc.2015;22:43–50.doi:10.1136/amiajnl-2014-002977}
+healthcare [@friedman14].
 
-::: {.note2team custom-style="bnote2team"}
-[NOTE FROM KS:  The following paragraph is the more detailed background of the
+`r (.nt<-note('','The following paragraph is the more detailed background of the
 anchoring report on LHS from the IOM.  Provided FYI, not necessarily to include
-in full narrative. KS]
-:::
-
+in full narrative.',fmt='t', author='Stevens, Kathleen'))[1]`
 In a 2013 report, the Institute of Medicine highlighted the use of routine data
 from service delivery (e.g., electronic health records) to generate knowledge to
 continuously improve healthcare.  “The committee believes that achieving a
@@ -152,12 +150,9 @@ learning health care system—one in which science and informatics,
 patient-clinician partnerships, incentives, and culture are aligned to
 prodownloadmote and enable continuous and real-time improvement in both the
 effectiveness and efficiency of care—is both necessary and possible for the
-nation.” (IOM, 2013, p. 21)
+nation.” [@smith13a]
+`r .nt[2]`
 
-{Institute of Medicine (IOM).  2013.  Best Care at Lower Cost:  The Path to
-Continuously Learning Health Care in America. Washington, DC:  National
-Academies Press.}   https://doi.org/10.17226/13444.
-https://www.nap.edu/catalog/13444/best-care-at-lower-cost-the-path-to-continuously-learning
 
 To address the need for assessment efficiency, we developed a Frailty Index that
 is calculated from readily available electronic health record data, reflecting a
@@ -165,19 +160,12 @@ key improvement strategy from the Learning Healthcare System (LHS) paradigm.
 
 # Methods
 
-Following principles of implementation science {Meissner, Paul, Linda B.
-Cottler, and J. Lloyd Michener. "Engagement science: The core of dissemination,
-implementation, and translational research science." Journal of Clinical and
-Translational Science 4, no. 3 (2020): 216-218.}, clinical stakeholders and
-experts (SE, CT) were directly engaged in the research design to identify key
-outcomes that were meaningful, relevant, and useful in guiding clinical care
-planning. We applied patient safety indicators used for routine large-scale
-surveillance of hospital and health system performance {Southern, Danielle A.,
-Bernard Burnand, Saskia E. Droesler, Ward Flemons, Alan J. Forster, Yana
-Gurevich, James Harrison et al. "Deriving ICD-10 codes for patient safety
-indicators for large-scale surveillance using administrative hospital data."
-Medical care 55, no. 3 (2017): 252-260} and extended the data set to include
-additional variables.
+Following principles of implementation science [@meissner20a], clinical
+stakeholders and experts (SE, CT) were directly engaged in the research design
+to identify key outcomes that were meaningful, relevant, and useful in guiding
+clinical care planning. We applied patient safety indicators used for routine
+large-scale surveillance of hospital and health system performance [@southern17]
+and extended the data set to include additional variables.
 
 ## Population
 
@@ -205,12 +193,11 @@ using only the development cohort and blinded to the testing cohort. For
 publication, the same analysis scripts were run on the testing cohort
 and used to create all results reported here (the development version of
 each table and figure is available in the supplemental materials). The
-baseline characteristics of the testing cohort are shown in 
-[I wonder if there are any specific comparisons between frail and
+`r note('baseline characteristics of the testing cohort are shown in','
+I wonder if there are any specific comparisons between frail and
 non-frail in table 1 that should be discussed in the text. Race, sex,
-age, number of visits?]{.comment-start id="1" author="Bokov, Alex F"
-date="2020-10-16T08:36:49Z"}Table []{.comment-end
-id="1"} \@ref(tab:table1).
+age, number of visits?',author="Bokov, Alex F",date="2020-10-16T08:36:49Z")` 
+Table \@ref(tab:table1).
 
 
 ***
@@ -274,16 +261,6 @@ enriched for these events.
 
 ## Statistical Analysis
 
-[[\@Bokov, Alex F](https://doi.org/10.17226/13444)
-COMMENT
-]{.comment-start id="999" author="Bokov, Alex F"
-date="December, 2020"} CONTENT []{.comment-end id="999"}
-
-`r print(foo<-note('Text one.','Regular comment'))` 
-More spacer text. Lorem ipsum. 
-`r note('Field three used.','Field3 has value',field3='[#FIELD3]')`. Lorem ipsum 
-`r note('No date','No date comment',date='')`. blarg balasdf `r foo`. Done.
-
 For each outcome of interest, we used a Cox proportional hazard model to
 estimate the risk of the first occurrences of the outcome after the patients'
 respective index visits using EFI as the predictor. Unlike earlier studies, we
@@ -296,30 +273,31 @@ some age subgroups, we repeated the analysis separately for the following age
 ranges: 18-45 years old, 45-65 years old, and 65 or above. These split the
 dataset into three roughly equal subgroups.
 
+
 # Results
 
 Table \@ref(tab:tb2) shows the results of Cox proportional hazard models for
 each of the responses, with EFI as the predictor. 
-[[\@Bokov, Alex F](https://www.nap.edu/catalog/13444/best-care-at-lower-cost-the-path-to-continuously-learning)
-TODO: Also say how many (number and %) of the frail and non-frail groups
-experienced each event. Or, maybe put it into the table.]{.comment-start
-id="3" author="Bokov, Alex F" date="2020-10-16T08:39:11Z"}
-For each 0.1 increase in
-EFI, we found at least a doubling of risk: `r pander(snip_resultsfold)`.
-[[\@Bokov, Alex
-F](https://doi.org/10.17226/13444) TODO: Fill in the appropriate values for
-these placeholders.]{.comment-start id="4" author="Bokov, Alex F"
-date="2020-10-16T08:46:37Z"}
-In other words, a patient with a frailty of 0 would have a `r fs('X% ()')` 
-chance of experiencing a patient safety compared to a patient with a frailty of 
-0.2, who would have a `r fs('Y% ()')` chance, while the overall risk is 
-`r fs('Z%()')`.
-[]{.comment-end id="4"} []{.comment-end
-id="3"}
+`r (.nt <- note('','longnote00',date='2020-10-16T08:46',fmt='b'))[1]`
+\@bokov
+\
+\
+TODO: Fill in the appropriate values for these placeholders. 
+\
+\
+Also say how many (number and %) of the frail and non-frail groups
+experienced each event. Or, maybe put it into the table.
+`r .nt[2]`
+For each 0.1 increase in EFI, we found at least a doubling of risk: 
+`r pander(snip_resultsfold)`. In other words, a patient with a frailty of 0 
+would have a `r fs('X% ()')`chance of experiencing a patient safety compared to 
+a patient with a frailty of 0.2, who would have a `r fs('Y% ()')` chance, while 
+the overall risk is `r fs('Z%()')`. `r .nt[3]`
 The p-values shown have been adjusted for multiple comparisons
 (`r as.english(nrow(tb2)) %>% as.character` outcomes reported in
 one study) using the @holm79 method and in all cases are 
-[[\@Bokov, Alex F](http://dx.doi.org/10.1136/amiajnl-2014-002977) Report a comparison between the developmental and test data.]{.comment-start id="2" author="Bokov, Alex F" date="2020-10-16T08:42:00Z"}highly significant[]{.comment-end id="2"}. 
+`r note('highly significant','Report a comparison between the developmental and test data.'
+,date='2020-10-16T08:42')`
 
 
 ```{r tb2}
@@ -453,22 +431,23 @@ provide real-time frailty assessment at the clinical point of care and assist
 clinicians in developing care plans to mitigate the risks of frailty.
 
 
-[[\@Stevens, Kathleen]() Can we make a parallel statement in our CONCLUSIONS? 
+`r note('...','Can we make a parallel statement in our CONCLUSIONS? 
 AN INTERESTING QUOTE FROM Southern:  “The methodological work presented here
 utilizes the unique potential of diagnosis timing information to produce a
 clinically relevant listing of diagnosis codes that have potential as PSIs that
 may overcome some of the notable shortcomings of existing PSI systems. The
 resulting work has great potential to inform future approaches to monitoring
-health system performance and quality/safety improvement internationally.”
-]{.comment-start id="6" author="Stevens, Kathleen"
-date="2020-10-16T08:30:43Z"}... []{.comment-end id="6"}
+health system performance and quality/safety improvement internationally.”'
+,author="Stevens, Kathleen",date="2020-10-16T08:30:43Z")`
 
 
 # Acknowledgments
 
-This work was supported by NIH/NCATS UL1TR001120 (AFB, KRS), the Long School
-of Medicine KL2 Award (AFB), `r fs('...',class='note2team')`
-
+`r note('This work was supported by NIH/NCATS UL1TR001120 and UL1TR002645 (AFB,
+KRS), the Long School of Medicine KL2 Award (AFB), the Claude D. Pepper Older
+Americans Independence Center P30 AG044271 (SER),  Berneice Castella
+Distinguished Professorship in Aging Research in Nursing  (KRS)'
+,'Did I get everybody's correctly?',date='2020-12-04T14:20')
 
 
 # References
