efi_paper.bib; bib; Removed duplicate copy of tsiouris13, added citations for Harrell's C

--- a/efi_paper.bib
+++ b/efi_paper.bib
@@ -2618,20 +2618,6 @@ CONCLUSIONS: Researchers should be cautious about use of proxy measurement of in
   number = {1}
 }
 
-@article{tsiouris13a,
-  title = {A Modified Frailty Index to Assess Morbidity and Mortality after Lobectomy},
-  author = {Tsiouris, Athanasios and Hammoud, Zane T. and Velanovich, Vic and Hodari, Arielle and Borgi, Jamil and Rubinfeld, Ilan},
-  year = {2013},
-  month = jul,
-  volume = {183},
-  pages = {40--46},
-  issn = {00224804},
-  doi = {10.1016/j.jss.2012.11.059},
-  journal = {Journal of Surgical Research},
-  language = {en},
-  number = {1}
-}
-
 @article{uppal15,
   title = {Frailty Index Predicts Severe Complications in Gynecologic Oncology Patients},
   author = {Uppal, Shitanshu and Igwe, Elena and Rice, Laurel W. and Spencer, Ryan J. and Rose, Stephen L.},
@@ -2763,3 +2749,37 @@ CONCLUSION: These results support the robustness of the concept of frailty as a 
   language = {en},
   number = {3}
 }
+
+@article{harrell84,
+  title = {Regression Modelling Strategies for Improved Prognostic Prediction},
+  author = {Harrell, Frank E. and Lee, Kerry L. and Califf, Robert M. and Pryor, David B. and Rosati, Robert A.},
+  year = {1984},
+  month = apr,
+  volume = {3},
+  pages = {143--152},
+  issn = {02776715, 10970258},
+  doi = {10.1002/sim.4780030207},
+  journal = {Statistics in Medicine},
+  language = {en},
+  number = {2}
+}
+
+@article{harrell96,
+  title = {Multivariable Prognostic Models: Issues in Developing Models, Evaluating Assumptions and Adequacy, and Measuring and Reducing Errors},
+  shorttitle = {Multivariable Prognostic Models},
+  author = {Harrell, F. E. and Lee, K. L. and Mark, D. B.},
+  year = {1996},
+  month = feb,
+  volume = {15},
+  pages = {361--387},
+  issn = {0277-6715},
+  doi = {10.1002/(SICI)1097-0258(19960229)15:4<361::AID-SIM168>3.0.CO;2-4},
+  abstract = {Multivariable regression models are powerful tools that are used frequently in studies of clinical outcomes. These models can use a mixture of categorical and continuous variables and can handle partially observed (censored) responses. However, uncritical application of modelling techniques can result in models that poorly fit the dataset at hand, or, even more likely, inaccurately predict outcomes on new subjects. One must know how to measure qualities of a model's fit in order to avoid poorly fitted or overfitted models. Measurement of predictive accuracy can be difficult for survival time data in the presence of censoring. We discuss an easily interpretable index of predictive discrimination as well as methods for assessing calibration of predicted survival probabilities. Both types of predictive accuracy should be unbiasedly validated using bootstrapping or cross-validation, before using predictions in a new data series. We discuss some of the hazards of poorly fitted and overfitted regression models and present one modelling strategy that avoids many of the problems discussed. The methods described are applicable to all regression models, but are particularly needed for binary, ordinal, and time-to-event outcomes. Methods are illustrated with a survival analysis in prostate cancer using Cox regression.},
+  journal = {Statistics in Medicine},
+  keywords = {Clinical Trials as Topic,Computer Graphics,Computer Simulation,Data Interpretation; Statistical,Discriminant Analysis,Humans,Linear Models,Male,Mathematical Computing,Models; Statistical,Multivariate Analysis,Prostatic Neoplasms,Regression Analysis,Software,Survival Analysis,Treatment Outcome},
+  language = {eng},
+  number = {4},
+  pmid = {8668867}
+}
+
+
