--- a/efi_paper.bib
+++ b/efi_paper.bib
@@ -2773,13 +2773,26 @@ CONCLUSION: These results support the robustness of the concept of frailty as a 
   volume = {15},
   pages = {361--387},
   issn = {0277-6715},
-  doi = {10.1002/(SICI)1097-0258(19960229)15:4<361::AID-SIM168>3.0.CO;2-4},
   abstract = {Multivariable regression models are powerful tools that are used frequently in studies of clinical outcomes. These models can use a mixture of categorical and continuous variables and can handle partially observed (censored) responses. However, uncritical application of modelling techniques can result in models that poorly fit the dataset at hand, or, even more likely, inaccurately predict outcomes on new subjects. One must know how to measure qualities of a model's fit in order to avoid poorly fitted or overfitted models. Measurement of predictive accuracy can be difficult for survival time data in the presence of censoring. We discuss an easily interpretable index of predictive discrimination as well as methods for assessing calibration of predicted survival probabilities. Both types of predictive accuracy should be unbiasedly validated using bootstrapping or cross-validation, before using predictions in a new data series. We discuss some of the hazards of poorly fitted and overfitted regression models and present one modelling strategy that avoids many of the problems discussed. The methods described are applicable to all regression models, but are particularly needed for binary, ordinal, and time-to-event outcomes. Methods are illustrated with a survival analysis in prostate cancer using Cox regression.},
   journal = {Statistics in Medicine},
   keywords = {Clinical Trials as Topic,Computer Graphics,Computer Simulation,Data Interpretation; Statistical,Discriminant Analysis,Humans,Linear Models,Male,Mathematical Computing,Models; Statistical,Multivariate Analysis,Prostatic Neoplasms,Regression Analysis,Software,Survival Analysis,Treatment Outcome},
   language = {eng},
   number = {4},
   pmid = {8668867}
+}
+
+
+
+@article{cox72,
+  title = {Regression {{Models}} and {{Life}}-{{Tables}}},
+  author = {Cox, DR},
+  year = {1972},
+  volume = {34},
+  pages = {187--220},
+  issn = {1369-7412},
+  journal = {Journal of the Royal Statistical Society Series B-Statistical Methodology},
+  language = {English},
+  number = {2}
 }
 
 
