efi_paper.bib; bib; Added references for validating Cox models

--- a/efi_paper.bib
+++ b/efi_paper.bib
@@ -2796,3 +2796,69 @@ CONCLUSION: These results support the robustness of the concept of frailty as a 
 }
 
 
+
+@article{rahman17,
+  title = {Review and Evaluation of Performance Measures for Survival Prediction Models in External Validation Settings},
+  author = {Rahman, M. Shafiqur and Ambler, Gareth and {Choodari-Oskooei}, Babak and Omar, Rumana Z.},
+  year = {2017},
+  month = dec,
+  volume = {17},
+  pages = {60},
+  issn = {1471-2288},
+  doi = {10.1186/s12874-017-0336-2},
+  file = {/home/a/Zotero/storage/9WUUQUX5/Rahman et al. - 2017 - Review and evaluation of performance measures for .pdf},
+  journal = {BMC Medical Research Methodology},
+  language = {en},
+  number = {1},
+  pmcid = {PMC5395888},
+  pmid = {28420338}
+}
+
+@article{royston04,
+  title = {A New Measure of Prognostic Separation in Survival Data},
+  author = {Royston, Patrick and Sauerbrei, Willi},
+  year = {2004},
+  month = mar,
+  volume = {23},
+  pages = {723--748},
+  issn = {02776715, 10970258},
+  doi = {10.1002/sim.1621},
+  journal = {Statistics in Medicine},
+  language = {en},
+  number = {5}
+}
+
+@article{royston13,
+  title = {External Validation of a {{Cox}} Prognostic Model: Principles and Methods},
+  shorttitle = {External Validation of a {{Cox}} Prognostic Model},
+  author = {Royston, Patrick and Altman, Douglas G},
+  year = {2013},
+  month = dec,
+  volume = {13},
+  pages = {33},
+  issn = {1471-2288},
+  doi = {10.1186/1471-2288-13-33},
+  file = {/home/a/Zotero/storage/ZZLC7T6G/Royston and Altman - 2013 - External validation of a Cox prognostic model pri.pdf},
+  journal = {BMC Medical Research Methodology},
+  language = {en},
+  number = {1},
+  pmcid = {PMC3667097},
+  pmid = {23496923}
+}
+
+
+
+@article{grambsch94,
+  title = {Proportional Hazards Tests and Diagnostics Based on Weighted Residuals},
+  author = {Grambsch, Patricia M. and Therneau, Terry M.},
+  year = {1994},
+  volume = {81},
+  pages = {515--526},
+  issn = {0006-3444, 1464-3510},
+  doi = {10.1093/biomet/81.3.515},
+  journal = {Biometrika},
+  language = {en},
+  number = {3}
+}
+
+
